<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">
    
    <EditText
        android:id="@+id/edit_distance"
        android:layout_width="match_parent"
        android:hint="@string/distance"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="2dp"
        android:text="@string/total_km"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:hint="@string/price"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginTop="32dp"/>

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="@string/price_per_liter"
        android:layout_marginTop="2dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_autonomy"
        android:layout_width="match_parent"
        android:hint="@string/autonomy"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"/>

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="@string/kms_per_liter"
        android:layout_marginTop="2dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="32dp"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:text="@string/total_spend"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/text_total_value"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:textAllCaps="true"
        android:textSize="38sp"
        android:text="@string/total_value"
        android:textColor="@color/purple_700"
        android:layout_height="wrap_content"
        />
    
    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/teal_200"
        android:textSize="20sp"
        android:padding="16dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        />



</LinearLayout>